Hotkey para editar publicacion fixeado

--- a/photologue_groups/templates/photologue_groups/videos/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/videos/publication_detail.html
@@ -171,7 +171,7 @@
                                                 <div class="row">
                                                     <button
                                                             class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
-                                                            type="button">Editar
+                                                            type="submit">Editar
                                                         <i class="material-icons right">mode_edit</i>
                                                     </button>
                                                 </div>
