Un solo boton para add widgets a cualquier workspace

--- a/dash/templates/dash/layouts/base_placeholder_edit.html
+++ b/dash/templates/dash/layouts/base_placeholder_edit.html
@@ -1,5 +1,14 @@
 {% load i18n dash_tags %}
 
+{% if widget_cells %}
+<div class="row center">
+    <a href="{% if workspace %}{% url 'dash.plugin_widgets' placeholder_uid=placeholder.uid workspace=workspace %}{% else %}{% url 'dash.plugin_widgets' placeholder_uid=placeholder.uid %}{% endif %}"
+       class="add-plugin waves-effect waves-light btn blue" title="{% trans 'Add widget' %}">
+        Añadir nuevo widget
+    </a>
+</div>
+{% endif %}
+
 {% for entry in dashboard_entries %}
     {% get_dash_plugin entry as plugin %}
 
@@ -23,13 +32,5 @@
                 {% if rendered %}{{ rendered }}{% endif %}
             {% endwith %}
         </div>
-    </div>
-{% endfor %}
-{% for cell_html_class, cell_position in widget_cells %}
-    <div class="plugin empty-widget-cell {{ cell_html_class }}" data-id="{{ cell_position }}">
-        <a href="{% if workspace %}{% url 'dash.plugin_widgets' placeholder_uid=placeholder.uid workspace=workspace position=cell_position %}{% else %}{% url 'dash.plugin_widgets' placeholder_uid=placeholder.uid position=cell_position %}{% endif %}"
-           class="add-plugin" title="{% trans 'Add widget' %}">
-            <span class="material-icons">add_circle</span>
-        </a>
     </div>
 {% endfor %}
