--- a/dash/templates/dash/layouts/placeholder_edit.html
+++ b/dash/templates/dash/layouts/placeholder_edit.html
@@ -1,7 +1,8 @@
 {% load i18n %}
-<div class="empty-widget-cell {{ cell_html_class }}">
-	<a href="{% if workspace %}{% url 'dash.plugin_widgets' placeholder_uid=placeholder_uid workspace=workspace position=position %}{% else %}{% url 'dash.plugin_widgets' placeholder_uid=placeholder_uid position=position %}{% endif %}"
-	class="add-plugin" title="{% trans 'Add widget' %}">
-	<span class="material-icons">add_circle</span>
-</a>
+
+<div class="row center">
+    <a href="{% if workspace %}{% url 'dash.plugin_widgets' placeholder_uid=placeholder_uid workspace=workspace %}{% else %}{% url 'dash.plugin_widgets' placeholder_uid=placeholder_uid %}{% endif %}"
+       class="add-plugin waves-effect waves-light btn blue" title="{% trans 'Add widget' %}">
+        Añadir nuevo widget
+    </a>
 </div>
