--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -4,14 +4,24 @@ Menu de notificaciones verticales
 {% load humanize %}
 {% load avatar_tags %}
 {% load static %}
-
     <script src="{% static "js/reconnecting-websocket.min.js" %}"></script>
     <script src="{% static "js/socket_notifications.js" %}" type="text/javascript"></script>
-
-<script>
-    UTILS_N.init([{{ user.pk }}]);
-    UTILS_N.conn_socket();
-</script>
+    <script>
+        UTILS_N.init([{{ user.pk }}]);
+        UTILS_N.conn_socket();
+    </script>
+    <style>
+        .remove_all, .list_all {
+            -webkit-transition: all .2s ease-in-out;
+            transition: all .2s ease-in-out;
+        }
+        .remove_all:hover {
+            color: #f44336 !important;
+        }
+        .list_all:hover {
+            color: #1e88e5 !important;
+        }
+    </style>
 <!-- MENU VERTICAL CON NOTIFICACIONES  -->
 <div id="notification-menu" class="side-nav nav-vertical-and-chat">
     {% if user_notifications %}
@@ -73,12 +83,13 @@ Menu de notificaciones verticales
         <div class="controls-notifications">
             {% if user_notifications %}
                 <a id="clear-notify"
-                title="Limpiar todas"
-                class="waves-effect waves-light btn white red-text nav-button-notifications"><i class="material-icons">clear_all</i></a>
+                    style="cursor: pointer;"
+                    title="Limpiar todas"
+                    class="black-text nav-button-notifications remove_all"><i class="material-icons">clear_all</i></a>
             {% endif %}
             <a href="/inbox/notifications/"
                 title="Ver todas"
-               class="waves-effect waves-light btn white blue-text nav-button-notifications">
+                class="black-text nav-button-notifications list_all">
                <i class="material-icons">list</i></a>
         </div>
     </div>
