--- a/skyfolk/static/css/profile.css
+++ b/skyfolk/static/css/profile.css
@@ -132,8 +132,9 @@
   box-shadow: 0 0 1px #1e88e5; }
 
 .user-pic {
-  width: 120px;
-  height: 120px; }
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover; }
   .user-pic img {
     max-width: 100%;
     max-height: 100%; }
@@ -181,7 +182,7 @@
 
 .user-card .user-stats {
   position: absolute;
-  margin-top: -40px;
+  margin-top: -120px;
   background-color: #fff;
   border-radius: 3px;
   padding: 0 !important; }
