--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -137,8 +137,9 @@ $followcolor: #64b5f6
   box-shadow: 0 0 1px #1e88e5
 
 .user-pic
-  width: 120px
-  height: 120px
+  max-width: 100%
+  max-height: 100%
+  object-fit: cover
   & img
     max-width: 100%
     max-height: 100%
@@ -185,7 +186,7 @@ $followcolor: #64b5f6
 
 .user-card .user-stats
   position: absolute
-  margin-top: -40px
+  margin-top: -120px
   background-color: #fff
   border-radius: 3px
   padding: 0 !important
