--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -185,8 +185,7 @@ $followcolor: #64b5f6
   width: 100%
 
 .user-card .user-stats
-  position: absolute
-  margin-top: -100px
+  position: relative
   background-color: #fff
   border-radius: 3px
   padding: 0 !important
