--- a/skyfolk/templates/groups/list_group.html
+++ b/skyfolk/templates/groups/list_group.html
@@ -99,6 +99,7 @@
                 <div class="input-field col s12">
                     <input name="q" placeholder="Buscar grupos" 
                         pattern=".{1,}" required="" title="1 character minimum" autocomplete="off" type="text" />
+                    <button type="submit" class="btn blue">Buscar</button>
                 </div>
             </form>
         </div>
